# unsupervised_track_segmentation

./: .gitignore  README.md  pyproject.toml
config/: config.yaml
results/: README.md
scripts/: README.md  kitti_eval.py
src/trackseg/: datamodules.py  datasets.py  model.py  utils.py
