[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"

[tool.poetry]
name = "unsupervised_track_segmentation"
version = "0.0.1"
description = "Unsupervised segmentation of video frames with the goal of detection bounds of a go-kart track"
authors = ["jbishop"]
license = "Apache-2.0 License"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
