[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"

[tool.poetry]
name = "unsupervised_track_segmentation"
version = "0.0.1"
description = "Unsupervised segmentation of video frames with the goal of detection bounds of a go-kart track"
authors = ["jbishop"]
license = "Apache-2.0 License"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.3"
wandb = "^0.12.1"
tqdm = "^4.62.2"
omegaconf = "^2.1.1"
hydra-core = "^1.1.1"


[tool.poetry.dev-dependencies]
poethepoet = "^0.11.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
force-cuda11 = "python -m pip install torch==1.10.0+cu113 torchvision==0.11.1+cu113 torchaudio==0.10.0+cu113 -f https://download.pytorch.org/whl/cu113/torch_stable.html"
add-lightning = "python -m pip install pytorch-lightning lightning-bolts"